// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot 1`] = `
<header
  className="Header"
>
  <div
    className="flex-container"
  >
    <button
      className="hamburger-icon"
      onClick={[MockFunction]}
    >
      <i
        className="fas fa-bars"
      />
    </button>
    <Link
      tabIndex="-1"
      to="/"
    >
      <h1>
        Haikuit
        <i
          className="fas fa-feather-alt"
        />
      </h1>
    </Link>
    <button
      className="search-icon"
      onClick={[Function]}
    >
      <i
        className="fas fa-search"
      />
    </button>
  </div>
</header>
`;

exports[`Header should match snapshot if searchShown is true 1`] = `
<header
  className="Header"
>
  <div
    className="flex-container"
  >
    <button
      className="hamburger-icon"
      onClick={[MockFunction]}
    >
      <i
        className="fas fa-bars"
      />
    </button>
    <Link
      tabIndex="-1"
      to="/"
    >
      <h1>
        Haikuit
        <i
          className="fas fa-feather-alt"
        />
      </h1>
    </Link>
    <button
      className="search-icon"
      onClick={[Function]}
    >
      <i
        className="fas fa-search"
      />
    </button>
  </div>
  <form
    onSubmit={[Function]}
  >
    <input
      className="search-input"
      onChange={[Function]}
      placeholder="Search for a word..."
      type="text"
    />
    <button
      className="search-btn"
    >
      GO
    </button>
  </form>
</header>
`;
